# fastapi-collection

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
01-basics/: README.md  pyproject.toml
01-basics/app/: __main__.py
01-basics/app/data/: item_data.py
01-basics/app/models/: item_model.py
01-basics/app/routes/: application.py  router.py
01-basics/app/routes/body/: __init__.py  body_view.py
01-basics/app/routes/form/: __init__.py  form_view.py
01-basics/app/routes/path/: __init__.py  path_view.py
01-basics/app/routes/query/: __init__.py  query_view.py
02-oauth2/: README.md  pyproject.toml
02-oauth2/app/: __main__.py
02-oauth2/app/auth/: auth_schemas.py
02-oauth2/app/core/: env_settings.py  orjson_model.py
02-oauth2/app/models/: user_model.py
02-oauth2/app/routes/user/: user_view.py
02-oauth2/envs/: example.env
03-project-management-app/: README.md  alembic.ini  pyproject.toml
03-project-management-app/app/: __main__.py  app_paths.py
03-project-management-app/app/alembic/: env.py
03-project-management-app/app/alembic/versions/: 2024-05-11-23-33-05_init.py
03-project-management-app/app/auth/: auth_handler.py
03-project-management-app/app/core/: dependencies.py  env_settings.py
03-project-management-app/app/data/: data.py
03-project-management-app/app/db/: base.py  db_session.py  init_data.py  insert_initial_data.py
03-project-management-app/app/models/: __init__.py  user_model.py
03-project-management-app/app/routes/: application.py  lifetime.py  router.py
03-project-management-app/app/routes/user/: __init__.py  user_dao.py  user_view.py
03-project-management-app/envs/: example.env
03-sqlalchemy-alembic/: alembic.md  pyproject.toml
03-sqlalchemy-alembic/app/: __main__.py
03-sqlalchemy-alembic/app/auth/: auth_exceptions.py  auth_test.py
03-sqlalchemy-alembic/app/core/: env_settings.py
03-sqlalchemy-alembic/app/routes/: application.py
