[tool.poetry]
name = "02-oauth2"
version = "0.1.0"
description = ""
authors = ["Rashmin Dungrani <rashmindungrani@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
orjson = "^3.10.2"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
